wk_taa_taaqa/src/objects/Support_Site_Feature_Details__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will hold Support Site Features Listing - used in Sales to Service Integration Project which allows case creation in Service Org.</description>
    <fields>
        <fullName>AccountType__c</fullName>
        <description>This holds Support Site Account Type</description>
        <inlineHelpText>This holds Support Site Account Type: s = Small Firm Services, o = Other</inlineHelpText>
        <label>AccountType</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Name__c</fullName>
        <description>This holds the Feature Name</description>
        <inlineHelpText>This holds the Feature Name</inlineHelpText>
        <label>Feature Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <description>This holds the Support Site Product Id</description>
        <inlineHelpText>This holds the Support Site Product Id</inlineHelpText>
        <label>ProductId</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Support Site Feature Details</label>
</CustomObject>